fix: nav button width avoid text wrapping

--- a/src/scss/vd.scss
+++ b/src/scss/vd.scss
@@ -68,7 +68,7 @@ header {
       text-align: center;
       text-decoration: none;
       user-select: none;
-      width: 10rem;
+      width: 12rem;
 
       transition: all var(--transition);
 
